--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+  background: #e2e1e0;
+  text-align: center;
+}
+
 .App {
   text-align: center;
 }
@@ -20,6 +25,11 @@
 
 .App-intro {
   font-size: large;
+}
+
+.Container {
+  margin: 5px auto;
+  max-width: 70vw;
 }
 
 @keyframes App-logo-spin {
